--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .netflix-logo {
- width:auto;
-    height:30px;
+ width:100px;
+    height:auto;
   color:rgb(229,9,20);
   fill:currentColor;
   display:block;
