--- a/src/components/Poster/Poster.css
+++ b/src/components/Poster/Poster.css
@@ -1,7 +1,7 @@
 .poster{
     width:100%;
-    height:720px;
-    background-size: cover;
+    height:1080px;
+    background-size:contain;
  
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 0;
@@ -17,6 +17,7 @@ font-size: 5rem;
 }
 
 .poster-description {
+  width: 30%;
   font-size: 1.3rem;
   padding: 10px 0 0 50px;
   color: white;
