--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
-/* RESET */
+@import "tailwindcss";
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  @apply m-0 p-0 box-border;
 }
 
-/* MOBILE FIRST */
 .app {
   min-height: 100vh;
   display: flex;
@@ -24,7 +22,7 @@
   flex: 1;
   padding: 1rem;
   display: grid;
-  grid-template-columns: 1fr; /* 1 column on mobile */
+  grid-template-columns: 1fr;
   gap: 1rem;
 }
 
@@ -35,14 +33,14 @@
   text-align: center;
 }
 
-/* TABLET */
+
+
 @media (min-width: 768px) {
   .content {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-/* DESKTOP */
 @media (min-width: 1024px) {
   .content {
     grid-template-columns: repeat(3, 1fr);
@@ -50,18 +48,17 @@
   }
 }
 
-
 .netflix-logo {
- width:5.5625rem;
-    height:1.5rem;
-  color:rgb(229,9,20);
-  fill:currentColor;
-  display:block;
+  width: 5.5625rem;
+  height: 1.5rem;
+  color: rgb(229, 9, 20);
+  fill: currentColor;
+  display: block;
 }
 @media screen and (max-width: 959.98px) {
   .netflix-logo {
-    width:5.5625rem;
-    height:1.5rem;
+    width: 5.5625rem;
+    height: 1.5rem;
   }
 }
 
@@ -70,7 +67,11 @@
   top: 0;
   width: 100%;
   height: 68px;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, .7) 10%, transparent);
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.7) 10%,
+    transparent
+  );
   padding-left: 52px;
   padding-right: 52px;
   display: flex;
